Add skeleton pages

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohit Singh – About Me</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Mohit Singh - Achievements</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
       <h1 id="nav-title">Mohit Singh</h1>
       <nav>
         <ul>
-          <li><a href="main.html" class="active">About Me</a></li>
-          <li><a href="pages/edu_bg.html">Educational Background</a></li>
-          <li><a href="pages/achievements.html">Achievements</a></li>
-          <li><a href="pages/skills.html">Skills</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="../main.html">About Me</a></li>
+          <li><a href="edu_bg.html">Educational Background</a></li>
+          <li><a href="achievements.html">Achievements</a></li>
+          <li><a href="skills.html" class="active">Skills</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li>
             <label class="theme-switcher">
               <input type="checkbox" id="switch" />
