Make theme persistent

--- a/pages/edu_bg.html
+++ b/pages/edu_bg.html
@@ -12,7 +12,9 @@
       <nav>
         <ul>
           <li><a href="../main.html">About Me</a></li>
-          <li><a href="edu_bg.html" class="active">Educational Background</a></li>
+          <li>
+            <a href="edu_bg.html" class="active">Educational Background</a>
+          </li>
           <li><a href="achievements.html">Achievements</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -26,10 +28,6 @@
       </nav>
     </header>
 
-    <script>
-      document.getElementById("switch").addEventListener("click", function () {
-        document.body.classList.toggle("dark-mode");
-      });
-    </script>
+    <script src="../theme_script.js"></script>
   </body>
 </html>
