--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -26,10 +26,6 @@
       </nav>
     </header>
 
-    <script>
-      document.getElementById("switch").addEventListener("click", function () {
-        document.body.classList.toggle("dark-mode");
-      });
-    </script>
+    <script src="../theme_script.js"></script>
   </body>
 </html>
