--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- Hamburger menu items -->
             <div class="menu-items mobile">
-              <li><a href="main.html" class="active">About Me</a></li>
+              <li><a href="index.html" class="active">About Me</a></li>
               <li><a href="pages/edu_bg.html">Educational Background</a></li>
               <li><a href="pages/achievements.html">Achievements</a></li>
               <li><a href="pages/skills.html">Skills</a></li>
@@ -44,7 +44,7 @@
 
         <!-- Navbar for desktop -->
         <ul class="desktop">
-          <li><a href="main.html" class="active">About Me</a></li>
+          <li><a href="index.html" class="active">About Me</a></li>
           <li><a href="pages/edu_bg.html">Educational Background</a></li>
           <li><a href="pages/achievements.html">Achievements</a></li>
           <li><a href="pages/skills.html">Skills</a></li>
