--- a/pages/edu_bg.html
+++ b/pages/edu_bg.html
@@ -24,7 +24,7 @@
 
             <!-- Hamburger menu items -->
             <div class="menu-items mobile">
-              <li><a href="../main.html">About Me</a></li>
+              <li><a href="../index.html">About Me</a></li>
               <li>
                 <a href="edu_bg.html" class="active">Educational Background</a>
               </li>
@@ -48,7 +48,7 @@
 
         <!-- Navbar for desktop -->
         <ul class="desktop">
-          <li><a href="../main.html">About Me</a></li>
+          <li><a href="../index.html">About Me</a></li>
           <li>
             <a href="edu_bg.html" class="active">Educational Background</a>
           </li>
