--- a/pages/skills.html
+++ b/pages/skills.html
@@ -24,7 +24,7 @@
 
             <!-- Hamburger menu items -->
             <div class="menu-items mobile">
-              <li><a href="../main.html">About Me</a></li>
+              <li><a href="../index.html">About Me</a></li>
               <li><a href="edu_bg.html">Educational Background</a></li>
               <li>
                 <a href="achievements.html">Achievements</a>
@@ -46,7 +46,7 @@
 
         <!-- Navbar for desktop -->
         <ul class="desktop">
-          <li><a href="../main.html">About Me</a></li>
+          <li><a href="../index.html">About Me</a></li>
           <li><a href="edu_bg.html">Educational Background</a></li>
           <li><a href="achievements.html">Achievements</a></li>
           <li><a href="skills.html" class="active">Skills</a></li>
