--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Singh – About Me</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
   </head>
   <body>
     <header>
@@ -64,10 +67,9 @@
     </header>
 
     <div class="hero-desktop">
-      <div class="vertical-flex">
+      <div class="vertical-flex" id="intro-desktop">
         <h1 class="intro desktop">
-          <span class="greeting" id="greeting-desktop">Hi!</span>
-          <br />
+          <div class="greeting shuffle" id="greeting-desktop">Hi!</div>
           I am Mohit Kumar Singh.
           <br />
           <p class="desc">
@@ -76,28 +78,28 @@
           </p>
         </h1>
         <div class="social-links">
-          <a href="https://github.com/unignoramus11"
+          <a href="https://github.com/unignoramus11" target="_blank"
             ><img
               src="icons/social-media/github/white.png"
               alt="GitHub"
               id="github-desktop"
               class="desktop"
           /></a>
-          <a href="https://www.linkedin.com/in/unignoramus/"
+          <a href="https://www.linkedin.com/in/unignoramus/" target="_blank"
             ><img
               src="icons/social-media/linkedIn/white.png"
               alt="LinkedIn"
               id="linkedin-desktop"
               class="desktop"
           /></a>
-          <a href="https://www.facebook.com/unignoramus/"
+          <a href="https://www.facebook.com/unignoramus/" target="_blank"
             ><img
               src="icons/social-media/facebook/white.png"
               alt="Facebook"
               id="facebook-desktop"
               class="desktop"
           /></a>
-          <a href="https://www.instagram.com/unignoramus/"
+          <a href="https://www.instagram.com/unignoramus/" target="_blank"
             ><img
               src="icons/social-media/instagram/white.png"
               alt="Instagram"
@@ -113,7 +115,7 @@
           /></a>
         </div>
         <div class="social-links">
-          <a href="https://vsco.co/unignoramus/gallery"
+          <a href="https://vsco.co/unignoramus/gallery" target="_blank"
             ><img
               src="icons/camera.png"
               alt="Photography Profile"
@@ -134,8 +136,7 @@
 
     <div class="hero-mobile">
       <h1 class="intro mobile">
-        <span class="greeting" id="greeting-mobile">Hi!</span>
-        <br />
+        <div class="greeting shuffle" id="greeting-mobile">Hi!</div>
         I am Mohit Kumar Singh.
         <br />
         <p class="desc">
@@ -152,28 +153,28 @@
         />
       </div>
       <div class="social-links">
-        <a href="https://github.com/unignoramus11"
+        <a href="https://github.com/unignoramus11" target="_blank"
           ><img
             src="icons/social-media/github/white.png"
             alt="GitHub"
             id="github-mobile"
             class="mobile"
         /></a>
-        <a href="https://www.linkedin.com/in/unignoramus/"
+        <a href="https://www.linkedin.com/in/unignoramus/" target="_blank"
           ><img
             src="icons/social-media/linkedIn/white.png"
             alt="LinkedIn"
             id="linkedin-mobile"
             class="mobile"
         /></a>
-        <a href="https://www.facebook.com/unignoramus/"
+        <a href="https://www.facebook.com/unignoramus/" target="_blank"
           ><img
             src="icons/social-media/facebook/white.png"
             alt="Facebook"
             id="facebook-mobile"
             class="mobile"
         /></a>
-        <a href="https://www.instagram.com/unignoramus/"
+        <a href="https://www.instagram.com/unignoramus/" target="_blank"
           ><img
             src="icons/social-media/instagram/white.png"
             alt="Instagram"
@@ -189,7 +190,7 @@
         /></a>
       </div>
       <div class="social-links">
-        <a href="https://vsco.co/unignoramus/gallery"
+        <a href="https://vsco.co/unignoramus/gallery" target="_blank"
           ><img
             src="icons/camera.png"
             alt="Photography Profile"
@@ -202,15 +203,16 @@
     <script src="theme_script.js"></script>
     <script>
       var greetings = [
-        "Hello!",
-        "હેલો",
+        "ஹலோ!",
         "Hola!",
         "नमस्ते!",
         "Hallo!",
-        "হ্যালো",
+        "হ্যালো!",
         "Ciao!",
-        " హలో",
-        "γεια",
+        " హలో!",
+        "γεια!",
+        "హలో!",
+        "Hi!",
       ];
       var greetingIndex = 0;
       var greetingElementDesktop = document.getElementById("greeting-desktop");
