--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Singh - Achievements</title>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" type="image/png" href="../favicon.png" />
   </head>
   <body>
     <header>
@@ -14,7 +15,11 @@
         <div class="navbar mobile">
           <div class="nav-container mobile">
             <!-- Hamburger menu toggle -->
-            <input class="checkbox mobile" type="checkbox" id="hamburger-menu" />
+            <input
+              class="checkbox mobile"
+              type="checkbox"
+              id="hamburger-menu"
+            />
 
             <div class="hamburger-lines mobile">
               <span class="line line1 mobile"></span>
