--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <script src="theme_script.js"></script>
     <script>
       var greetings = [
-        "ஹலோ!",
+        "привет",
         "Hola!",
         "नमस्ते!",
         "Hallo!",
