Add a missing exclamation point

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <script src="theme_script.js"></script>
     <script>
       var greetings = [
-        "привет",
+        "привет!",
         "Hola!",
         "नमस्ते!",
         "Hallo!",
