Add Education Background page for desktop

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="dark-mode">
     <header>
-      <h1 id="name" class="desktop">Mohit Singh</h1>
+      <h1 id="name" class="desktop topic">Mohit Singh</h1>
       <nav>
         <!-- Navbar for mobile = Hamburger menu -->
         <div class="navbar mobile">
@@ -32,7 +32,7 @@
             <!-- Hamburger menu items -->
             <div class="menu-items mobile">
               <li><a href="index.html" class="active">About Me</a></li>
-              <li><a href="pages/edu_bg.html">Educational Background</a></li>
+              <li><a href="pages/edu_bg.html">Education Background</a></li>
               <li><a href="pages/achievements.html">Achievements</a></li>
               <li><a href="pages/skills.html">Skills</a></li>
               <li><a href="pages/blog.html">Blog</a></li>
@@ -46,13 +46,13 @@
           </div>
 
           <!-- Section name -->
-          <h1 class="section-name">About Me</h1>
+          <h1 class="section-name topic">About Me</h1>
         </div>
 
         <!-- Navbar for desktop -->
-        <ul class="desktop">
+        <ul class="desktop internal-links">
           <li><a href="index.html" class="active">About Me</a></li>
-          <li><a href="pages/edu_bg.html">Educational Background</a></li>
+          <li><a href="pages/edu_bg.html">Education Background</a></li>
           <li><a href="pages/achievements.html">Achievements</a></li>
           <li><a href="pages/skills.html">Skills</a></li>
           <li><a href="pages/blog.html">Blog</a></li>
@@ -70,7 +70,7 @@
       <div class="vertical-flex" id="intro-desktop">
         <h1 class="intro desktop">
           <div class="greeting shuffle" id="greeting-desktop">Hi!</div>
-          I am Mohit Kumar Singh.
+          <span class="emphasis">I am Mohit Kumar Singh.</span>
           <br />
           <p class="desc">
             A passionate computer science student who likes photography, reading
