--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" href="../favicon.png" />
   </head>
-  <body>
+  <body class="dark-mode">
     <header>
-      <h1 id="name" class="desktop">Mohit Singh</h1>
+      <h1 id="name" class="desktop topic">Mohit Singh</h1>
       <nav>
         <!-- Navbar for mobile = Hamburger menu -->
         <div class="navbar mobile">
@@ -30,10 +30,8 @@
             <!-- Hamburger menu items -->
             <div class="menu-items mobile">
               <li><a href="../index.html">About Me</a></li>
-              <li><a href="edu_bg.html">Educational Background</a></li>
-              <li>
-                <a href="achievements.html" class="active">Achievements</a>
-              </li>
+              <li><a href="edu_bg.html">Education Background</a></li>
+              <li><a href="achievements.html" class="active">Achievements</a></li>
               <li><a href="skills.html">Skills</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li>
@@ -46,13 +44,13 @@
           </div>
 
           <!-- Section name -->
-          <h1 class="section-name">Achievements</h1>
+          <h1 class="section-name topic">Achievements</h1>
         </div>
 
         <!-- Navbar for desktop -->
-        <ul class="desktop">
+        <ul class="desktop internal-links">
           <li><a href="../index.html">About Me</a></li>
-          <li><a href="edu_bg.html">Educational Background</a></li>
+          <li><a href="edu_bg.html">Education Background</a></li>
           <li><a href="achievements.html" class="active">Achievements</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="blog.html">Blog</a></li>
