--- a/pages/edu_bg.html
+++ b/pages/edu_bg.html
@@ -3,13 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohit Singh - Educational Background</title>
+    <title>Mohit Singh - Education Background</title>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" href="../favicon.png" />
+    <style>
+      .dot {
+        height: 4vw;
+        width: 4vw;
+        background-color: #e7295c;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 25px;
+      }
+
+      .small-dot {
+        height: 1vw;
+        width: 1vw;
+        background-color: #6f293c;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 20px;
+      }
+
+      .smaller-dot {
+        height: 0.5vw;
+        width: 0.5vw;
+        background-color: #f07394;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 10px;
+      }
+
+      .edu-flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-right: 20px;
+      }
+
+      .edu-head-flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-size: x-large;
+      }
+
+      .edu-body-flex {
+        display: flex;
+        flex-direction: row;
+        /* justify-content: space-around; */
+        align-items: flex-start;
+        padding: 5px;
+        margin-left: 200px;
+        align-items: center;
+      }
+      @keyframes slideInFromLeft {
+        0% {
+          opacity: 0;
+          transform: translateX(-2000px);
+        }
+        60% {
+          opacity: 1;
+          transform: translateX(30px);
+        }
+        80% {
+          transform: translateX(-10px);
+        }
+        100% {
+          transform: translateX(0);
+        }
+      }
+    </style>
   </head>
-  <body>
+  <body class="dark-mode">
     <header>
-      <h1 id="name" class="desktop">Mohit Singh</h1>
+      <h1 id="name" class="desktop topic">Mohit Singh</h1>
       <nav>
         <!-- Navbar for mobile = Hamburger menu -->
         <div class="navbar mobile">
@@ -31,11 +100,9 @@
             <div class="menu-items mobile">
               <li><a href="../index.html">About Me</a></li>
               <li>
-                <a href="edu_bg.html" class="active">Educational Background</a>
+                <a href="edu_bg.html" class="active">Education Background</a>
               </li>
-              <li>
-                <a href="achievements.html">Achievements</a>
-              </li>
+              <li><a href="achievements.html">Achievements</a></li>
               <li><a href="skills.html">Skills</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li>
@@ -48,15 +115,13 @@
           </div>
 
           <!-- Section name -->
-          <h1 class="section-name">Educational Background</h1>
+          <h1 class="section-name topic">Education Background</h1>
         </div>
 
         <!-- Navbar for desktop -->
-        <ul class="desktop">
+        <ul class="desktop internal-links">
           <li><a href="../index.html">About Me</a></li>
-          <li>
-            <a href="edu_bg.html" class="active">Educational Background</a>
-          </li>
+          <li><a href="edu_bg.html" class="active">Education Background</a></li>
           <li><a href="achievements.html">Achievements</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -70,31 +135,107 @@
       </nav>
     </header>
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ab
-      consectetur dolorem fugiat quisquam earum deserunt ea aut maiores esse?
-      Quo, minus unde? Facilis autem provident eum. Obcaecati nisi voluptas
-      dignissimos totam facere inventore sequi in reprehenderit? Ratione porro
-      voluptates inventore possimus. Voluptate fugiat corrupti sunt ad a vitae
-      corporis commodi odit obcaecati. Eligendi blanditiis modi, sequi ipsa,
-      exercitationem veritatis saepe maxime velit rerum, quisquam obcaecati!
-      Fugiat qui autem impedit dignissimos illo quasi harum aspernatur quaerat
-      eos, dolorum quibusdam eum assumenda ipsa nostrum vitae nobis optio
-      recusandae! Temporibus harum eius sunt vel adipisci praesentium blanditiis
-      accusantium similique possimus. Ipsum neque nobis cupiditate, nostrum
-      adipisci reiciendis harum consectetur voluptatibus facere saepe voluptatem
-      laborum, ducimus commodi doloremque, quibusdam dignissimos enim.
-      Voluptatum cupiditate sint totam dolorum, praesentium perspiciatis
-      voluptas ipsum, ut excepturi laudantium repudiandae consequuntur nostrum
-      sequi fugiat alias. Esse est quae excepturi, ut vero explicabo minus quod
-      accusantium nam nobis facilis obcaecati assumenda iste aperiam
-      consequuntur corporis voluptate voluptas beatae. Eos, quo neque est
-      molestias cumque sit optio dolorum impedit illum omnis ut sapiente veniam
-      modi magnam porro, corrupti labore distinctio. Itaque distinctio
-      architecto sequi, velit dolorem incidunt dolore dicta non cupiditate
-      ducimus dignissimos perspiciatis vero consequuntur, iste mollitia est
-      ratione temporibus.
-    </p>
+    <div style="padding: 25px">
+      <div
+        class="small-dot"
+        style="animation: 0.3s ease-in-out 0s 1 slideInFromLeft"
+      ></div>
+      <br />
+      <div class="edu-flex">
+        <div class="edu-head-flex emphasis">
+          <div
+            class="dot"
+            style="animation: 0.4s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>
+            International Institute of Information Technology, Hyderabad (IIITH)
+          </div>
+          <div style="color: #e7295c; font-style: italic">2023 - Present</div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 0.5s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>
+            Degree: Bachelor of Technology (B. Tech) + Master of Science (MS) by
+            Research
+          </div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 0.6s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>Field of Study: Computer Science and Engineering</div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 0.7s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>Grade(s): SGPA (1st Semester) – 10.0/10.0</div>
+        </div>
+      </div>
+      <br />
+      <div
+        class="small-dot"
+        style="animation: 0.8s ease-in-out 0s 1 slideInFromLeft"
+      ></div>
+      <br />
+      <div
+        class="small-dot"
+        style="animation: 0.9s ease-in-out 0s 1 slideInFromLeft"
+      ></div>
+      <br />
+      <div
+        class="small-dot"
+        style="animation: 1s ease-in-out 0s 1 slideInFromLeft"
+      ></div>
+      <br />
+      <div class="edu-flex">
+        <div class="edu-head-flex emphasis">
+          <div
+            class="dot"
+            style="animation: 1.1s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>Delhi Public School, Patna (DPS, Patna)</div>
+          <div style="color: #e7295c; font-style: italic">2011 - 2023</div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 1.2s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>Classes: 1–12th</div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 1.3s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>
+            Field of Study: Physics, Chemistry, Mathematics and English with
+            Computer Science
+          </div>
+        </div>
+        <div class="edu-body-flex">
+          <div
+            class="smaller-dot"
+            style="animation: 1.4s ease-in-out 0s 1 slideInFromLeft"
+          ></div>
+          <div>
+            Grade(s): Class 10 (AISSE - CBSE): 98.3%, Class 12 (AISSCE - CBSE):
+            99.2%
+          </div>
+        </div>
+        <div
+          class="small-dot"
+          style="animation: 1.5s ease-in-out 0s 1 slideInFromLeft"
+        ></div>
+        <br />
+      </div>
+    </div>
 
     <script src="../theme_script.js"></script>
   </body>
