--- a/pages/edu_bg.html
+++ b/pages/edu_bg.html
@@ -52,27 +52,38 @@
       .edu-body-flex {
         display: flex;
         flex-direction: row;
-        /* justify-content: space-around; */
         align-items: flex-start;
         padding: 5px;
         margin-left: 200px;
         align-items: center;
       }
-      @keyframes slideInFromLeft {
-        0% {
-          opacity: 0;
-          transform: translateX(-2000px);
-        }
-        60% {
-          opacity: 1;
-          transform: translateX(30px);
-        }
-        80% {
-          transform: translateX(-10px);
-        }
-        100% {
-          transform: translateX(0);
-        }
+
+      .mobile .edu-flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-right: 0px;
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
+
+      .mobile .edu-head-flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-size: x-large;
+        padding-bottom: 10px;
+      }
+
+      .mobile .edu-body-flex {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        padding: 0px;
+        margin-left: 0px;
+        align-items: center;
+        padding-top: 10px;
       }
     </style>
   </head>
@@ -135,7 +146,7 @@
       </nav>
     </header>
 
-    <div style="padding: 25px">
+    <div class="desktop" style="padding: 25px">
       <div
         class="small-dot"
         style="animation: 0.3s ease-in-out 0s 1 slideInFromLeft"
@@ -234,6 +245,109 @@
           style="animation: 1.5s ease-in-out 0s 1 slideInFromLeft"
         ></div>
         <br />
+      </div>
+    </div>
+
+    <div class="mobile" style="padding: 25px">
+      <div class="edu-flex">
+        <div
+          class="edu-head-flex emphasis"
+          style="animation: 0.3s ease-in-out 0s 1 slideInFromLeft"
+        >
+          <div>
+            International Institute of Information Technology, Hyderabad (IIITH)
+          </div>
+        </div>
+        <div
+          class="emphasis"
+          style="
+            color: #e7295c;
+            font-style: italic;
+            animation: 0.4s ease-in-out 0s 1 slideInFromLeft;
+          "
+        >
+          2023 - Present
+        </div>
+        <ul>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 0.5s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>
+                Degree: Bachelor of Technology (B. Tech) + Master of Science
+                (MS) by Research
+              </div>
+            </div>
+          </li>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 0.6s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>Field of Study: Computer Science and Engineering</div>
+            </div>
+          </li>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 0.7s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>Grade(s): SGPA (1st Semester) – 10.0/10.0</div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="edu-flex">
+        <div
+          class="edu-head-flex emphasis"
+          style="animation: 0.8s ease-in-out 0s 1 slideInFromLeft"
+        >
+          <div>Delhi Public School, Patna (DPS, Patna)</div>
+        </div>
+        <div
+          class="emphasis"
+          style="
+            color: #e7295c;
+            font-style: italic;
+            animation: 0.9s ease-in-out 0s 1 slideInFromLeft;
+          "
+        >
+          2011 - 2023
+        </div>
+        <ul>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 1s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>Classes: 1–12th</div>
+            </div>
+          </li>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 1.1s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>
+                Field of Study: Physics, Chemistry, Mathematics and English with
+                Computer Science
+              </div>
+            </div>
+          </li>
+          <li>
+            <div
+              class="edu-body-flex"
+              style="animation: 1.2s ease-in-out 0s 1 slideInFromLeft"
+            >
+              <div>
+                Grade(s): Class 10 (AISSE - CBSE): 98.3%, Class 12 (AISSCE -
+                CBSE): 99.2%
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
 
